exports[`basic usage`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput3">
    Fruits
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="textInput3"
    name="fruits"
    onBlur={[Function]}
    onChange={[Function]}
    value="strawberry">
    <option
      value="apple">
      apple
    </option>
    <option
      value="orange">
      orange
    </option>
    <option
      value="strawberry">
      strawberry
    </option>
    <option
      value="banana">
      banana
    </option>
  </select>
</div>
`;

exports[`separate labels and values`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput4">
    New England States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="textInput4"
    name="new-england-states"
    onBlur={[Function]}
    onChange={[Function]}
    value="RI">
    <option
      value="CN">
      Connecticut
    </option>
    <option
      value="ME">
      Maine
    </option>
    <option
      value="MA">
      Massachusetts
    </option>
    <option
      value="NH">
      New Hampshire
    </option>
    <option
      value="RI">
      Rhode Island
    </option>
    <option
      value="VT">
      Vermont
    </option>
  </select>
</div>
`;

exports[`separate option groups`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput5">
    Northeast States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="textInput5"
    name="northeast-states"
    onBlur={[Function]}
    onChange={[Function]}
    value="MD">
    <optgroup
      label="New England States">
      <option
        value="CN">
        Connecticut
      </option>
      <option
        value="ME">
        Maine
      </option>
      <option
        value="MA">
        Massachusetts
      </option>
      <option
        value="NH">
        New Hampshire
      </option>
      <option
        value="RI">
        Rhode Island
      </option>
      <option
        value="VT">
        Vermont
      </option>
    </optgroup>
    <optgroup
      label="Mid Atlantic States">
      <option
        value="DE">
        Delaware
      </option>
      <option
        value="MD">
        Maryland
      </option>
      <option
        value="NJ">
        New Jersey
      </option>
      <option
        value="NY">
        New York
      </option>
      <option
        value="PA">
        Pennsylvania
      </option>
      <option
        value="VA">
        Virginia
      </option>
      <option
        value="DC">
        Washington, DC
      </option>
      <option
        value="WV">
        West Virginia
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`with validation`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput6">
    Favorite Color
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="textInput6"
    name="color"
    onBlur={[Function]}
    onChange={[Function]}
    value="">
    <option
      value="">
      
    </option>
    <option
      value="red">
      red
    </option>
    <option
      value="orange">
      orange
    </option>
    <option
      value="yellow">
      yellow
    </option>
    <option
      value="green">
      green
    </option>
    <option
      value="blue">
      blue
    </option>
    <option
      value="purple">
      purple
    </option>
  </select>
</div>
`;
